Форма, тень, фильтр.

--- a/hotels.html
+++ b/hotels.html
@@ -29,10 +29,13 @@
           <div class="filter-inf-house">
             <div class="filter-infrastructure">
               <h3 class="filter-infrastructure-title">Инфраструктура:</h3>
+              <div class="filter-div">
                 <input id="cfirst" type="checkbox" name="first" checked hidden />
                 <label class="filter-select" for="cfirst">
                   <span class="filter-name">Бассейн</span>
                 </label>
+              </div>
+
                 <input id="csecond" type="checkbox" name="second" hidden />
                 <label class="filter-select" for="csecond">
                   <span class="filter-name">Парковка</span>
