--- a/hotels.html
+++ b/hotels.html
@@ -47,16 +47,16 @@
             </div>
             <div class="filter-houses">
               <h3 class="filter-houses-title">Тип жилья:</h3>
-              <input id="cfirst" type="checkbox" name="first" checked hidden />
-                <label class="filter-select" for="cfirst">
+              <input id="cfourth" type="checkbox" name="fourth" checked hidden />
+                <label class="filter-select" for="cfourth">
                   <span class="filter-name">Гостиница</span>
                 </label>
-                <input id="csecond" type="checkbox" name="second" checked hidden />
-                <label class="filter-select" for="csecond">
+                <input id="cfifth" type="checkbox" name="fifth" checked hidden />
+                <label class="filter-select" for="cfifth">
                   <span class="filter-name">Мотель</span>
                 </label>
-                <input id="cthird" type="checkbox" name="third" checked hidden />
-                <label class="filter-select" for="cthird">
+                <input id="csix" type="checkbox" name="six" checked hidden />
+                <label class="filter-select" for="csix">
                   <span class="filter-name">Апартаменты</span>
                 </label>
             </div>
@@ -91,11 +91,17 @@
         <a href="#" class="search-select search-type">По типу</a>
         <a href="#" class="search-select search-rating">По рейтингу</a>
       </div>
+      <!--НАЧАЛО  блок со стрелками вниз/вверх -->
       <div class="search-right-size">
-        <!-- блок со стрелками вниз/вверх -->
-        <a class="search-up" href="#"></a>
-        <a class="search-down" href="#"></a>
+        <a class="search-up" href="#">
+          <!-- <img src="img/corner-up-gray.png"> -->
+        </a>
+        <a class="search-down" href="#">
+          <!-- <img src="img/corner-down-gray.png"> -->
+        </a>
       </div>
+
+      <!--КОНЕЦ  блок со стрелками вниз/вверх -->
     </div>
 
 <!--НАЧАЛО БЛОК С ОТЕЛЕМ АМАРА-->
