Поменяла <input> + и - на <a>

--- a/index.html
+++ b/index.html
@@ -135,12 +135,16 @@
 
 
             <div class="buttons">
-              <a class="plus-adult" href="#"></a>
+              <a class="minus-adult" href="#">
+                <img src="img/minus.png">
+              </a>
               <!-- кнопка взрослые"-" -->
 
               <input class="small" type="text" id="booking-audit-adult" value="2" required />
 
-              <input type="button" class="plus-adult" name="button-plus" required />
+              <a class="plus-adult" href="#">
+                 <img src="img/plus.png">
+              </a>
             </div>
 
 
