--- a/hotels.html
+++ b/hotels.html
@@ -134,7 +134,7 @@
       </div><!--общий для блока с рисунком и отелем-->
       <div class="rating clearfix"><!--общий для блока со звездами и рейтингом-->
         <div class="rating-stars"><!--блок со звездами-->
-          <img src="img/stars-4.png">
+          <img src="img/stars-4.png" alt="stars-4">
         </div><!--блок со звездами-->
         <div class="rating-number"><!--блок с рейтингом-->
           <p>Рейтинг: 8.5</p>
@@ -173,7 +173,7 @@
       </div><!--общий для блока с рисунком и отелем-->
       <div class="rating clearfix"><!--общий для блока со звездами и рейтингом-->
         <div class="rating-stars"><!--блок со звездами-->
-          <img src="img/stars-3.png">
+          <img src="img/stars-3.png" alt="stars-3">
         </div><!--блок со звездами-->
         <div class="rating-number"><!--блок с рейтингом-->
           <p>Рейтинг: 8.9</p>
@@ -212,7 +212,7 @@
       </div><!--общий для блока с рисунком и отелем-->
       <div class="rating clearfix"><!--общий для блока со звездами и рейтингом-->
         <div class="rating-stars"><!--блок со звездами-->
-          <img src="img/stars-2.png">
+          <img src="img/stars-2.png" alt="stars-2">
         </div><!--блок со звездами-->
         <div class="rating-number"><!--блок с рейтингом-->
           <p>Рейтинг: 9.2</p>
@@ -222,16 +222,15 @@
 <!--КОНЕЦ БЛОК С ОТЕЛЕМ VILLAS AT POCO-->
 
   </main>
-
   <footer class="container">
     <div class="container clearfix">
       <section class="link-first">
-        <a class="hashtag properties-black-h3" href="#">#visitsedona</p>
+        <a class="hashtag properties-black-h3" href="#">#visitsedona</a>
       </section>
       <section class="link-second">
-        <a class="social-btn social-btn-twitter" href="https://twitter.com/">Twitter</a><!-- иконка твиттера png-->
-        <a class="social-btn social-btn-facebook" href="https://www.facebook.com/">Facebook</a><!-- иконка контакта png-->
-        <a class="social-btn social-btn-youtube" href="http://www.youtube.com/">Youtube</a><!-- иконка ютуба png-->
+        <a class="social-btn social-btn-twitter" href="https://twitter.com">Twitter</a><!-- иконка твиттера png-->
+        <a class="social-btn social-btn-facebook" href="https://www.facebook.com">Facebook</a><!-- иконка контакта png-->
+        <a class="social-btn social-btn-youtube" href="http://www.youtube.com">Youtube</a><!-- иконка ютуба png-->
       </section>
       <section class="link-third">
         <span class="html-ac">website by </span>
