--- a/hotels.html
+++ b/hotels.html
@@ -17,8 +17,8 @@
         <li><a href="#">Информация</a></li>
         <li><a href="#">Фото и видео</a></li>
          <li><a class="menu-logo" href="index.html"><img src="img/logo.png" alt=""></a></li><!--добавить картинку логотипа menu-logo.png-->
-        <li><a href="#">Карта штата</a></li>
-        <li><a href="hotels.html">Гостиницы</a></li>
+        <li class="menu-maps"><a href="#">Карта штата</a></li>
+        <li class="menu-hotels"><a href="hotels.html">Гостиницы</a></li>
       </ul>
     </nav>
     </header>
